--- a/index.html
+++ b/index.html
@@ -1,28 +1,97 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Professional wood floor installation and refinishing in NJ, NY, and Philadelphia." />
-  <meta name="keywords" content="hardwood flooring, floor sanding, floor installation, NJ, NY, Philadelphia" />
-  <meta name="author" content="Your Name" />
-  <title>Wood Floor Experts - NJ, NY & Philadelphia</title>
+  <meta name="description" content="Hardwood flooring, tile installation and remodeling services in NJ, NY, and Philadelphia by LO Construction." />
+  <meta name="keywords" content="hardwood flooring, tile installation, vinyl flooring, remodeling, NJ, NY, Philadelphia" />
+  <meta name="author" content="LO Construction" />
+  <title>LO Construction - Flooring & Remodeling</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; }
-    header { background: #222; color: #fff; padding: 20px; text-align: center; }
-    nav { background: #444; color: #fff; text-align: center; padding: 10px 0; }
-    nav a { color: #fff; margin: 0 15px; text-decoration: none; }
-    section { padding: 20px; max-width: 900px; margin: auto; background: #fff; }
-    footer { background: #222; color: #fff; text-align: center; padding: 20px; }
-    .btn { background: #0a74da; color: #fff; padding: 10px 20px; text-decoration: none; border-radius: 5px; }
-    .btn:hover { background: #084d9c; }
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #3b241c url('https://images.unsplash.com/photo-1570129477492-45c003edd2be') no-repeat center center fixed;
+      background-size: cover;
+      color: #f4e3c1;
+    }
+    header {
+      background: rgba(59, 36, 28, 0.95);
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.8em;
+      margin: 0;
+      color: #f4e3c1;
+    }
+    header p {
+      font-size: 1.2em;
+      margin-top: 10px;
+      color: #d8c4a5;
+    }
+    nav {
+      background: #2c1a14;
+      text-align: center;
+      padding: 10px 0;
+    }
+    nav a {
+      color: #f4e3c1;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 30px 20px;
+      background: rgba(59, 36, 28, 0.95);
+      max-width: 1000px;
+      margin: 20px auto;
+      border-radius: 10px;
+    }
+    h2 {
+      color: #f4e3c1;
+    }
+    ul li {
+      margin-bottom: 8px;
+    }
+    .btn {
+      display: inline-block;
+      background: #d8a353;
+      color: #1c120e;
+      padding: 12px 24px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 6px;
+      margin-top: 10px;
+    }
+    .btn:hover {
+      background: #e4b86c;
+    }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 20px;
+    }
+    .gallery img {
+      width: 30%;
+      border-radius: 8px;
+    }
+    footer {
+      background: #2c1a14;
+      color: #d8c4a5;
+      text-align: center;
+      padding: 20px;
+      margin-top: 30px;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Professional Hardwood Flooring</h1>
-    <p>Serving NJ, NY & Philadelphia | Installation, Sanding & Refinishing</p>
+    <h1>LO CONSTRUCTION</h1>
+    <p>Hardwood Flooring · Remodeling · General Carpentry</p>
+    <p>NJ · NY · Philadelphia</p>
   </header>
 
   <nav>
@@ -36,25 +105,34 @@
     <ul>
       <li>Hardwood floor installation</li>
       <li>Floor sanding and refinishing</li>
-      <li>Custom stains and finishing</li>
-      <li>Repairs and restoration of damaged floors</li>
+      <li>Laminate and vinyl flooring</li>
+      <li>Tile installation</li>
     </ul>
   </section>
 
   <section id="about">
     <h2>About Us</h2>
-    <p>We are a skilled team with years of experience in hardwood flooring. We offer quality, punctuality, and fair prices for homes, apartments, and commercial spaces across New Jersey, New York, and Philadelphia.</p>
+    <p>LO Construction offers years of experience in hardwood flooring and tile installation. We provide top-quality, punctual, and affordable service for homes, apartments, and commercial spaces across New Jersey, New York, and Philadelphia.</p>
   </section>
 
   <section id="contact">
     <h2>Get a Free Quote</h2>
-    <p><strong>Phone / WhatsApp:</strong> (123) 456-7890</p>
-    <p><strong>Email:</strong> contact@woodflooringusa.com</p>
-    <a href="https://wa.me/11234567890" class="btn">Click here to message us</a>
+    <p><strong>Phone / WhatsApp:</strong> (133) 456-7890</p>
+    <p><strong>Email:</strong> contact@loconstruction.com</p>
+    <a href="https://wa.me/11334567890?text=Hi!%20I'm%20interested%20in%20getting%20a%20quote%20from%20LO%20Construction." class="btn">Message us on WhatsApp</a>
+  </section>
+
+  <section>
+    <h2>Gallery</h2>
+    <div class="gallery">
+      <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Wood Floor" />
+      <img src="https://images.unsplash.com/photo-1583337130417-3346a1d3a1aa" alt="Parquet Floor" />
+      <img src="https://images.unsplash.com/photo-1615873968403-89e068629265" alt="Tile Floor" />
+    </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 Wood Floor Experts USA. All rights reserved.</p>
+    <p>&copy; 2025 LO Construction. All rights reserved.</p>
   </footer>
 </body>
 </html>
