--- a/index.html
+++ b/index.html
@@ -12,29 +12,32 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      background: #3b241c url('https://images.unsplash.com/photo-1570129477492-45c003edd2be') no-repeat center center fixed;
-      background-size: cover;
+      background-color: #3b241c;
       color: #f4e3c1;
     }
     header {
-      background: rgba(59, 36, 28, 0.95);
-      padding: 40px 20px;
+      background-image: url('https://images.unsplash.com/photo-1570129477492-45c003edd2be');
+      background-size: cover;
+      background-position: center;
       text-align: center;
+      padding: 60px 20px;
     }
     header h1 {
       font-size: 2.8em;
       margin: 0;
       color: #f4e3c1;
+      text-shadow: 2px 2px #000;
     }
     header p {
       font-size: 1.2em;
+      color: #e4cfa1;
       margin-top: 10px;
-      color: #d8c4a5;
+      text-shadow: 1px 1px #000;
     }
     nav {
-      background: #2c1a14;
+      background-color: #2c1a14;
       text-align: center;
-      padding: 10px 0;
+      padding: 12px 0;
     }
     nav a {
       color: #f4e3c1;
@@ -43,9 +46,9 @@
       font-weight: bold;
     }
     section {
+      background-color: #4b2d21;
       padding: 30px 20px;
-      background: rgba(59, 36, 28, 0.95);
-      max-width: 1000px;
+      max-width: 900px;
       margin: 20px auto;
       border-radius: 10px;
     }
