--- a/index.html
+++ b/index.html
@@ -1,141 +1,119 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Hardwood flooring, tile installation and remodeling services in NJ, NY, and Philadelphia by LO Construction." />
-  <meta name="keywords" content="hardwood flooring, tile installation, vinyl flooring, remodeling, NJ, NY, Philadelphia" />
-  <meta name="author" content="LO Construction" />
-  <title>LO Construction - Flooring & Remodeling</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #3b241c;
-      color: #f4e3c1;
-    }
-    header {
-      background-image: url('https://images.unsplash.com/photo-1570129477492-45c003edd2be');
-      background-size: cover;
-      background-position: center;
-      text-align: center;
-      padding: 60px 20px;
-    }
-    header h1 {
-      font-size: 2.8em;
-      margin: 0;
-      color: #f4e3c1;
-      text-shadow: 2px 2px #000;
-    }
-    header p {
-      font-size: 1.2em;
-      color: #e4cfa1;
-      margin-top: 10px;
-      text-shadow: 1px 1px #000;
-    }
-    nav {
-      background-color: #2c1a14;
-      text-align: center;
-      padding: 12px 0;
-    }
-    nav a {
-      color: #f4e3c1;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    section {
-      background-color: #4b2d21;
-      padding: 30px 20px;
-      max-width: 900px;
-      margin: 20px auto;
-      border-radius: 10px;
-    }
-    h2 {
-      color: #f4e3c1;
-    }
-    ul li {
-      margin-bottom: 8px;
-    }
-    .btn {
-      display: inline-block;
-      background: #d8a353;
-      color: #1c120e;
-      padding: 12px 24px;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 6px;
-      margin-top: 10px;
-    }
-    .btn:hover {
-      background: #e4b86c;
-    }
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 20px;
-    }
-    .gallery img {
-      width: 30%;
-      border-radius: 8px;
-    }
-    footer {
-      background: #2c1a14;
-      color: #d8c4a5;
-      text-align: center;
-      padding: 20px;
-      margin-top: 30px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LO Construction</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #1f1a17;
+            color: #fce7c6;
+        }
+        header {
+            background-image: url('https://images.unsplash.com/photo-1600585153943-008184b779d4?auto=format&fit=crop&w=1350&q=80');
+            background-size: cover;
+            background-position: center;
+            padding: 60px 20px;
+            text-align: center;
+        }
+        header h1 {
+            font-size: 40px;
+            margin: 0;
+        }
+        header p {
+            font-size: 18px;
+            margin-top: 10px;
+        }
+        section {
+            padding: 40px 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+        h2 {
+            color: #fcd34d;
+        }
+        .section {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 40px;
+        }
+        .box {
+            background-color: #4b2e1e;
+            padding: 20px;
+            border-radius: 8px;
+            flex: 1;
+            min-width: 260px;
+        }
+        .gallery {
+            display: flex;
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .gallery img {
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+            border-radius: 4px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            font-size: 14px;
+            background-color: #1a1613;
+            color: #d4d4d4;
+        }
+        .button {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 15px;
+            background-color: #fcd34d;
+            color: #1f1a17;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>LO CONSTRUCTION</h1>
-    <p>Hardwood Flooring · Remodeling · General Carpentry</p>
-    <p>NJ · NY · Philadelphia</p>
-  </header>
+    <header>
+        <h1>LO CONSTRUCTION</h1>
+        <p>Hardwood Flooring · Remodeling · General Carpentry</p>
+    </header>
 
-  <nav>
-    <a href="#services">Services</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-  </nav>
+    <section class="section">
+        <div class="box">
+            <h2>Our Services</h2>
+            <ul>
+                <li>Hardwood floor installation</li>
+                <li>Floor sanding and refinishing</li>
+                <li>Laminate and vinyl flooring</li>
+                <li>Tile installation</li>
+            </ul>
+        </div>
 
-  <section id="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Hardwood floor installation</li>
-      <li>Floor sanding and refinishing</li>
-      <li>Laminate and vinyl flooring</li>
-      <li>Tile installation</li>
-    </ul>
-  </section>
+        <div class="box">
+            <h2>About Us</h2>
+            <p>LO Construction offers years of experience in hardwood flooring. We offer quality, punctuality, and fair prices for homes, apartments, and commercial spaces across New Jersey, New York, and Philadelphia.</p>
+        </div>
+    </section>
 
-  <section id="about">
-    <h2>About Us</h2>
-    <p>LO Construction offers years of experience in hardwood flooring and tile installation. We provide top-quality, punctual, and affordable service for homes, apartments, and commercial spaces across New Jersey, New York, and Philadelphia.</p>
-  </section>
+    <section class="section">
+        <div class="box" style="width:100%">
+            <h2>Gallery</h2>
+            <div class="gallery">
+                <img src="https://i.imgur.com/o6pQZQh.jpeg" alt="Wood Floor 1">
+                <img src="https://i.imgur.com/2zwZTxM.jpeg" alt="Wood Floor 2">
+                <img src="https://i.imgur.com/Cyp4azL.jpeg" alt="Tile Floor">
+            </div>
+        </div>
+    </section>
 
-  <section id="contact">
-    <h2>Get a Free Quote</h2>
-    <p><strong>Phone / WhatsApp:</strong> (133) 456-7890</p>
-    <p><strong>Email:</strong> contact@loconstruction.com</p>
-    <a href="https://wa.me/11334567890?text=Hi!%20I'm%20interested%20in%20getting%20a%20quote%20from%20LO%20Construction." class="btn">Message us on WhatsApp</a>
-  </section>
-
-  <section>
-    <h2>Gallery</h2>
-    <div class="gallery">
-      <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Wood Floor" />
-      <img src="https://images.unsplash.com/photo-1583337130417-3346a1d3a1aa" alt="Parquet Floor" />
-      <img src="https://images.unsplash.com/photo-1615873968403-89e068629265" alt="Tile Floor" />
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 LO Construction. All rights reserved.</p>
-  </footer>
+    <footer>
+        © 2025 LO Construction. All rights reserved.
+    </footer>
 </body>
 </html>
