--- a/index.html
+++ b/index.html
@@ -2,118 +2,119 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LO Construction</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #1f1a17;
-            color: #fce7c6;
-        }
-        header {
-            background-image: url('https://images.unsplash.com/photo-1600585153943-008184b779d4?auto=format&fit=crop&w=1350&q=80');
-            background-size: cover;
-            background-position: center;
-            padding: 60px 20px;
-            text-align: center;
-        }
-        header h1 {
-            font-size: 40px;
-            margin: 0;
-        }
-        header p {
-            font-size: 18px;
-            margin-top: 10px;
-        }
-        section {
-            padding: 40px 20px;
-            max-width: 900px;
-            margin: auto;
-        }
-        h2 {
-            color: #fcd34d;
-        }
-        .section {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            gap: 40px;
-        }
-        .box {
-            background-color: #4b2e1e;
-            padding: 20px;
-            border-radius: 8px;
-            flex: 1;
-            min-width: 260px;
-        }
-        .gallery {
-            display: flex;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        .gallery img {
-            width: 100px;
-            height: 100px;
-            object-fit: cover;
-            border-radius: 4px;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            font-size: 14px;
-            background-color: #1a1613;
-            color: #d4d4d4;
-        }
-        .button {
-            display: inline-block;
-            margin-top: 10px;
-            padding: 10px 15px;
-            background-color: #fcd34d;
-            color: #1f1a17;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 5px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LO Construction</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #2e1e14;
+      color: #f6e6cf;
+    }
+    header {
+      background: url('https://images.unsplash.com/photo-1600566753444-d3d7e2ebd36c?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+      padding: 60px 20px;
+      text-align: center;
+      color: #fff3da;
+      box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
+    }
+    header h1 {
+      font-size: 3em;
+      margin: 0;
+    }
+    header p {
+      font-size: 1.2em;
+      margin-top: 10px;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      color: #f5d393;
+      margin-bottom: 10px;
+    }
+    .card {
+      background-color: #5c3413;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 30px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #1c120a;
+      color: #aa8d66;
+    }
+    .gallery {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    .gallery img {
+      width: 250px;
+      border-radius: 8px;
+      border: 2px solid #aa8d66;
+    }
+    .whatsapp-button {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #f5d393;
+      color: #000;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>LO CONSTRUCTION</h1>
-        <p>Hardwood Flooring · Remodeling · General Carpentry</p>
-    </header>
+  <header>
+    <h1>LO CONSTRUCTION</h1>
+    <p>Hardwood Flooring · Remodeling · General Carpentry</p>
+  </header>
 
-    <section class="section">
-        <div class="box">
-            <h2>Our Services</h2>
-            <ul>
-                <li>Hardwood floor installation</li>
-                <li>Floor sanding and refinishing</li>
-                <li>Laminate and vinyl flooring</li>
-                <li>Tile installation</li>
-            </ul>
-        </div>
+  <section>
+    <div class="card">
+      <h2>Our Services</h2>
+      <ul>
+        <li>Hardwood floor installation</li>
+        <li>Floor sanding and refinishing</li>
+        <li>Laminate and vinyl flooring</li>
+        <li>Tile installation</li>
+      </ul>
+    </div>
 
-        <div class="box">
-            <h2>About Us</h2>
-            <p>LO Construction offers years of experience in hardwood flooring. We offer quality, punctuality, and fair prices for homes, apartments, and commercial spaces across New Jersey, New York, and Philadelphia.</p>
-        </div>
-    </section>
+    <div class="card">
+      <h2>About Us</h2>
+      <p>LO Construction has years of experience in hardwood flooring and tile installation. We offer quality, punctuality, and fair prices for homes, apartments, and commercial spaces across New Jersey, New York, and Philadelphia.</p>
+    </div>
 
-    <section class="section">
-        <div class="box" style="width:100%">
-            <h2>Gallery</h2>
-            <div class="gallery">
-                <img src="https://i.imgur.com/o6pQZQh.jpeg" alt="Wood Floor 1">
-                <img src="https://i.imgur.com/2zwZTxM.jpeg" alt="Wood Floor 2">
-                <img src="https://i.imgur.com/Cyp4azL.jpeg" alt="Tile Floor">
-            </div>
-        </div>
-    </section>
+    <div class="card">
+      <h2>Contact</h2>
+      <p><strong>Phone / WhatsApp:</strong> (133) 456-7890</p>
+      <p><strong>Email:</strong> contact@loconstruction.com</p>
+      <a class="whatsapp-button" href="https://wa.me/1334567890" target="_blank">Message us on WhatsApp</a>
+    </div>
 
-    <footer>
-        © 2025 LO Construction. All rights reserved.
-    </footer>
+    <div class="card">
+      <h2>Gallery</h2>
+      <div class="gallery">
+        <img src="https://i.imgur.com/jhZKxCU.jpeg" alt="Floor sample 1" />
+        <img src="https://i.imgur.com/Z6VdBrA.jpeg" alt="Floor sample 2" />
+        <img src="https://i.imgur.com/y2cMXbT.jpeg" alt="Floor sample 3" />
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 LO Construction. All rights reserved.
+  </footer>
 </body>
 </html>
