--- a/index.html
+++ b/index.html
@@ -1,51 +1,54 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LO Construction</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LO Construction</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <header>
-        <h1>LO CONSTRUCTION</h1>
-        <p>Hardwood Flooring · Remodeling · General Carpentry</p>
-    </header>
-    <main>
-        <section class="info">
-            <div class="box">
-                <h2>Our Services</h2>
-                <ul>
-                    <li>Hardwood floor installation</li>
-                    <li>Floor sanding and refinishing</li>
-                    <li>Laminate and vinyl flooring</li>
-                    <li>Tile installation</li>
-                </ul>
-            </div>
-            <div class="box">
-                <h2>About Us</h2>
-                <p>LO Construction offers years of experience in hardwood flooring.
-                We offer quality, punctuality, and fair prices for homes, apartments,
-                and commercial spaces across New Jersey, New York, and Philadelphia.</p>
-            </div>
-        </section>
-        <section class="quote">
-            <h2>Get a Free Quote</h2>
-            <p><strong>Phone / WhatsApp:</strong> (133) 456-7890</p>
-            <a href="https://wa.me/1334567890" class="button">Message us on WhatsApp</a>
-        </section>
-        <section class="gallery">
-            <h2>Gallery</h2>
-            <div class="images">
-                <img src="floor1.jpg" alt="Floor 1">
-                <img src="floor2.jpg" alt="Floor 2">
-                <img src="floor3.jpg" alt="Floor 3">
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>© 2025 LO Construction. All rights reserved.</p>
-    </footer>
+  <header class="header">
+    <h1>LO CONSTRUCTION</h1>
+    <p>Hardwood Flooring · Remodeling · General Carpentry</p>
+  </header>
+
+  <section class="info-section">
+    <div class="info-box">
+      <h2>Our Services</h2>
+      <ul>
+        <li>Hardwood floor installation</li>
+        <li>Floor sanding and refinishing</li>
+        <li>Laminate and vinyl flooring</li>
+        <li>Tile installation</li>
+      </ul>
+    </div>
+    <div class="info-box">
+      <h2>About Us</h2>
+      <p>
+        LO Construction has years of experience in hardwood flooring.
+        We offer quality, punctuality, and fair prices for homes,
+        apartments, and commercial spaces across New Jersey, New York, and Philadelphia.
+      </p>
+    </div>
+  </section>
+
+  <section class="quote-section">
+    <h2>Get a Free Quote</h2>
+    <p><strong>Phone / WhatsApp:</strong> (133) 456-7890</p>
+    <a href="https://wa.me/1334567890" class="whatsapp-button">Message us on WhatsApp</a>
+  </section>
+
+  <section class="gallery-section">
+    <h2>Gallery</h2>
+    <div class="gallery">
+      <img src="floor1.jpg" alt="Floor 1"/>
+      <img src="floor2.jpg" alt="Floor 2"/>
+      <img src="floor3.jpg" alt="Floor 3"/>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 LO Construction. All rights reserved.</p>
+  </footer>
 </body>
 </html>
