--- a/index.html
+++ b/index.html
@@ -38,14 +38,9 @@
     <a href="https://wa.me/1334567890" class="whatsapp-button">Message us on WhatsApp</a>
   </section>
 
- <section class="gallery-section">
-  <h2>Gallery</h2>
-  <div class="gallery">
-    <img src="floor1.jpg" alt="Floor 1" />
-    <img src="floor2.jpg" alt="Floor 2" />
-    <img src="floor3.jpg" alt="Floor 3" />
-  </div>
-</section>
+ <img src="floor1.png" alt="Floor 1" />
+<img src="floor2.png" alt="Floor 2" />
+<img src="floor3.png" alt="Floor 3" />
 
 
   <footer>
